--- a/gestion-tutorat-front/src/app/components/affiche-tuteurs/affiche-tuteurs.component.html
+++ b/gestion-tutorat-front/src/app/components/affiche-tuteurs/affiche-tuteurs.component.html
@@ -60,7 +60,7 @@
         <th mat-header-cell *matHeaderCellDef>{{ 'TUTORS.LASTNAME' | translate }}</th>
         <td mat-cell *matCellDef="let element">
           <ng-container *ngIf="element.nom; else notNom">
-            <a [routerLink]="['/tuteurs', element.id]">{{ element.nom }}</a>
+            <a [routerLink]="['/tuteurs', element.id]">{{ element.nom | formatName }}</a>
           </ng-container>
           <ng-template #notNom><span class="text-muted">{{ 'TUTORS.NOT_SPECIFIED' | translate }}</span></ng-template>
         </td>
@@ -70,7 +70,7 @@
         <th mat-header-cell *matHeaderCellDef>{{ 'TUTORS.FIRSTNAME' | translate }}</th>
         <td mat-cell *matCellDef="let element">
           <ng-container *ngIf="element.prenom; else notPrenom">
-            <a [routerLink]="['/tuteurs', element.id]">{{ element.prenom }}</a>
+            <a [routerLink]="['/tuteurs', element.id]">{{ element.prenom | formatName }}</a>
           </ng-container>
           <ng-template #notPrenom><span class="text-muted">{{ 'TUTORS.NOT_SPECIFIED' | translate }}</span></ng-template>
         </td>
