--- a/gestion-tutorat-front/src/app/components/tuteur-create/tuteur-create.component.html
+++ b/gestion-tutorat-front/src/app/components/tuteur-create/tuteur-create.component.html
@@ -9,14 +9,14 @@
         <!-- Nom -->
         <div class="form-group">
           <label>{{ 'CREATE.LASTNAME' | translate }}</label>
-          <input type="text" formControlName="nom" class="form-control" [ngClass]="{ 'is-invalid': submitted && f['nom'].invalid }">
+          <input type="text" formControlName="nom" class="form-control" [ngClass]="{ 'is-invalid': submitted && f['nom'].invalid }" (blur)="onNameBlur('nom')">
           <div *ngIf="submitted && f['nom'].invalid" class="invalid-feedback">{{ 'CREATE.REQUIRED' | translate }}</div>
         </div>
 
         <!-- Prénom -->
         <div class="form-group">
           <label>{{ 'CREATE.FIRSTNAME' | translate }}</label>
-          <input type="text" formControlName="prenom" class="form-control" [ngClass]="{ 'is-invalid': submitted && f['prenom'].invalid }">
+          <input type="text" formControlName="prenom" class="form-control" [ngClass]="{ 'is-invalid': submitted && f['prenom'].invalid }" (blur)="onNameBlur('prenom')">
           <div *ngIf="submitted && f['prenom'].invalid" class="invalid-feedback">{{ 'CREATE.REQUIRED' | translate }}</div>
         </div>
 
