--- a/gestion-tutorat-front/src/app/components/tuteur-edit/tuteur-edit.component.html
+++ b/gestion-tutorat-front/src/app/components/tuteur-edit/tuteur-edit.component.html
@@ -9,7 +9,8 @@
         type="text"
         class="form-control"
         formControlName="nom"
-        [ngClass]="{ 'is-invalid': submitted && f['nom'].invalid }" />
+        [ngClass]="{ 'is-invalid': submitted && f['nom'].invalid }"
+        (blur)="onNameBlur('nom')" />
       <div *ngIf="submitted && f['nom'].invalid" class="invalid-feedback">
         {{ 'EDIT_TUTOR.REQUIRED' | translate }}
       </div>
@@ -22,7 +23,8 @@
         type="text"
         class="form-control"
         formControlName="prenom"
-        [ngClass]="{ 'is-invalid': submitted && f['prenom'].invalid }" />
+        [ngClass]="{ 'is-invalid': submitted && f['prenom'].invalid }"
+        (blur)="onNameBlur('prenom')" />
       <div *ngIf="submitted && f['prenom'].invalid" class="invalid-feedback">
         {{ 'EDIT_TUTOR.REQUIRED' | translate }}
       </div>
